# cloudtrail-s3-lambda

./: .gitignore  Cargo.toml  Dockerfile  README.md  keys.gpg
scripts/: build.sh  create_function.sh  test-deploy.sh  update_function.sh
src/: alarm.rs  alert.rs  errors.rs  main.rs
